--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.5.17",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
+    "vue-ueditor-wrap": "^2.4.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
